// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CIRCLE UI COMPONENT TEST Circle with Changing state 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  />
  <div
    className="circle   changing"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle_tail"
  />
</div>
`;

exports[`CIRCLE UI COMPONENT TEST Circle with Default state 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle_tail"
  />
</div>
`;

exports[`CIRCLE UI COMPONENT TEST Circle with Modified state 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  />
  <div
    className="circle   modified"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle_tail"
  />
</div>
`;

exports[`CIRCLE UI COMPONENT TEST Circle with head 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="content "
        data-cy="circle-wrapper"
      >
        <div
          class="text text_type_input text_color_input mb-4 absolute head string"
          data-testid="circle_head"
        >
          asd
        </div>
        <div
          class="circle   default"
          data-cy="circle"
        >
          <p
            class="text text_type_circle text_color_input letter"
            data-testid="circle_letter"
          />
        </div>
        <p
          class="text text_type_input text_color_input mt-4 absolute index"
        />
        <div
          class="text text_type_input text_color_input mt-4 absolute tail30 element"
          data-testid="circle_tail"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="content "
      data-cy="circle-wrapper"
    >
      <div
        class="text text_type_input text_color_input mb-4 absolute head string"
        data-testid="circle_head"
      >
        asd
      </div>
      <div
        class="circle   default"
        data-cy="circle"
      >
        <p
          class="text text_type_circle text_color_input letter"
          data-testid="circle_letter"
        />
      </div>
      <p
        class="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        class="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-testid="circle_tail"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CIRCLE UI COMPONENT TEST Circle with index 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  >
    4
  </p>
  <div
    className="text text_type_input text_color_input mt-4 absolute tail60 element"
    data-testid="circle_tail"
  />
</div>
`;

exports[`CIRCLE UI COMPONENT TEST Circle with isSmall props 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  />
  <div
    className="circle  small default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle_tail"
  />
</div>
`;

exports[`CIRCLE UI COMPONENT TEST Circle with letter 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    >
      q
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle_tail"
  />
</div>
`;

exports[`CIRCLE UI COMPONENT TEST Circle with react element in head 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  >
    <div
      className="content "
      data-cy="circle-wrapper"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-testid="circle_head"
      />
      <div
        className="circle   default"
        data-cy="circle"
      >
        <p
          className="text text_type_circle text_color_input letter"
          data-testid="circle_letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-testid="circle_tail"
      />
    </div>
  </div>
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle_tail"
  />
</div>
`;

exports[`CIRCLE UI COMPONENT TEST Circle with react element in tail 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle_tail"
  >
    <div
      className="content "
      data-cy="circle-wrapper"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-testid="circle_head"
      />
      <div
        className="circle   default"
        data-cy="circle"
      >
        <p
          className="text text_type_circle text_color_input letter"
          data-testid="circle_letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-testid="circle_tail"
      />
    </div>
  </div>
</div>
`;

exports[`CIRCLE UI COMPONENT TEST Circle with tail 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 string"
    data-testid="circle_tail"
  >
    tail
  </div>
</div>
`;

exports[`CIRCLE UI COMPONENT TEST Circle without letter 1`] = `
<div
  className="content "
  data-cy="circle-wrapper"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circle_head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="circle_letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circle_tail"
  />
</div>
`;
